--- a/src/html/layouts/application.html
+++ b/src/html/layouts/application.html
@@ -12,6 +12,9 @@
   <body>
     {% block content %}{% endblock %}
     {% block javascript %}
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-rc1/jquery.min.js" charset="utf-8"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js" charset="utf-8"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js" charset="utf-8"></script>
       <script src="javascripts/app.js"></script>
     {% endblock %}
   </body>
